force-app/main/default/objects/custom_create19__c/custom_create19__c.object-meta.xml
<CustomObject>
    <label>Custom created object19</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects19</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>