force-app/main/default/objects/custom_create19__c/fields/custom_create_19field649__c.field-meta.xml
<CustomField>
    <fullName>custom_create_19field649__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 19field649</label>
    <type>Checkbox</type>
</CustomField>