force-app/main/default/objects/custom_create19__c/fields/custom_create_19field696__c.field-meta.xml
<CustomField>
    <fullName>custom_create_19field696__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 19field696</label>
    <type>Checkbox</type>
</CustomField>